# Rustycord

./: Cargo.toml
src/: main.rs  utils.rs
src/core/: bot.rs
src/utils/guild/: channel.rs
src/utils/net/responses/: gateway.rs
