[package]
name = "discord_rust"
version = "0.1.0"
authors = ["Nolann <nolann.juet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
websocket = "0.26.2"
native-tls = "0.2.7"
serde_json = "1.0.64"